appId: com.voltafrontend.app
---
- runFlow:
    file: ../shared/ensure_ready_user.yaml

- openLink: 'voltafrontend:///wallet/transfer?__e2eQueryState=error'

- extendedWaitUntil:
    visible:
      id: wallet-transfer-screen-error-state
    timeout: 30000
- tapOn:
    id: wallet-transfer-screen-error-state-retry-button
- extendedWaitUntil:
    visible:
      id: wallet-transfer-screen
    timeout: 30000
